--- a/bookEx_Final_Version_2025Fall/bookEx/bookEx/templates/bookMng/aboutus.html
+++ b/bookEx_Final_Version_2025Fall/bookEx/bookEx/templates/bookMng/aboutus.html
@@ -31,7 +31,7 @@
         <h3>Built by</h3>
         <ul>
             <li>Samantha Vazquez</li>
-            <li>Add your name</li>
+            <li>Kevin Guerrero</li>
         </ul>
     </div>
 
