added name to about us

--- a/bookEx_Final_Version_2025Fall/bookEx/bookEx/templates/bookMng/aboutus.html
+++ b/bookEx_Final_Version_2025Fall/bookEx/bookEx/templates/bookMng/aboutus.html
@@ -30,8 +30,9 @@
 
         <h3>Built by</h3>
         <ul>
-            <li>Samantha Vazquez</li>
-            <li>Add your name</li>
+             <li>Samantha Vazquez</li>
+            <li>Robert Melena</li>
+            <li>Eric William</li>
             <li>Kevin Guerrero</li>
         </ul>
     </div>
