--- a/bookEx_Final_Version_2025Fall/bookEx/bookEx/templates/registration/register_success.html
+++ b/bookEx_Final_Version_2025Fall/bookEx/bookEx/templates/registration/register_success.html
@@ -9,7 +9,7 @@
 {% block content %}
 <div class="auth-container">
   <div class="auth-card">
-    <h2>Account Created ✅</h2>
+    <h2>Account Created </h2>
     <p>Your account has been successfully created.</p>
     <a class="auth-btn" href="/login/">Go to Login</a>
   </div>
